# generic-schema

./: .gitignore  pyproject.toml
docs/: README.md
src/generic_schema/: check_config.py  extra_validators.py  parse_validator.py  validators.py
tests/: example.json  example.toml  test_parse_validator.py  test_validators.py
